# ordo

./: .dockerignore  .gitattributes  .gitignore  AUDIT_NOTES.md  Build-Ordo-Linux-AppImage.sh  Build-Ordo-Linux-Deb.sh  Build-Ordo-Linux-Portable.sh  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  Install-Desktop-Shortcut.cmd  Install-Linux-Desktop-Shortcut.sh  Install-Ordo-Linux-Deb.sh  Install-Ordo-Linux.sh  Launch-Ordo-Portable.cmd  Launch-Ordo-Portable.ps1  Launch-Ordo-Portable.sh  Launch-Ordo-Servo.cmd  Launch-Ordo-Servo.ps1  Launch-Ordo-Servo.sh  Launch-Ordo-Servo.vbs  Launch-Ordo-Studio.cmd  Launch-Ordo-Studio.ps1  Launch-Ordo-Studio.sh  Ordo.desktop  PUBLIC_RELEASE_NOTES.md  README-BETA.md  README.md  Test-Ordo-Functions.ps1  docker-compose.yml
docs/: agent-orchestration.md  architecture-contract.md  architecture.md  assistant.md  avatar.md  build-history.md  build-spine.md  code-execution.md  control-api.md  creative-ops.md  developer-guide.md  domain-map.md  fixbook.md  grounding-floor.md  interface-map.md  linux-build-release-playbook.md  linux-popos-install-findings.md  memory-architecture.md  memory-tree-mapping.md  mode-lifecycle.md  official-memory.md  operator-simulator.md  plugins.md  prompt-injection-defense.md  rag-map.md  review.md  revisit-notes.md  rust-vibe-coder-memory-anchors.md  secrets-architecture-blueprint.md  secrets-dependency-audit.md  security.md  self-heal-skill.md  skill-routing.md  strainer-thesis-and-blueprint.md  ui-extensions.md  user-guide.md  uxi-design-spec.md  what-is-ordo.md
mcp-servers/: README.md
ordo-agents/: Cargo.toml
ordo-agents/src/: lib.rs
ordo-apps/: Cargo.toml
ordo-assistant/: Cargo.toml
ordo-assistant/src/: events.rs  extractor.rs  knowledge.rs  lib.rs  meta_tools.rs  orchestration.rs  prompt.rs  recall.rs  seeder.rs  service.rs  store.rs  summarizer.rs  tools.rs  types.rs
ordo-assistant/tests/: eval.rs  review_integration.rs  seeder.rs  streaming.rs  turn_loop.rs
ordo-assistant/tests/common/: mod.rs
ordo-automation/: Cargo.toml
ordo-automation-primitives/: Cargo.toml
ordo-automation/src/: lib.rs
ordo-avatar/: Cargo.toml
ordo-avatar/src/: atlas.rs  lib.rs  state.rs
ordo-brain/: Cargo.toml
ordo-brain/src/: lib.rs
ordo-build-planner/: Cargo.toml
ordo-build-planner/src/: lib.rs  peer.rs  store.rs
ordo-build-primitives/: Cargo.toml
ordo-bus/: Cargo.toml
ordo-bus/src/: correlator.rs  lib.rs  registry.rs
ordo-classify/: Cargo.toml
ordo-cli/: Cargo.toml
ordo-cli/src/: apps_cmd.rs  chat_cmd.rs  cloud_cmd.rs  ext_cmd.rs  lifecycle.rs  main.rs  mcp_cmd.rs  plugins_cmd.rs  runtime_cmd.rs  security_cmd.rs  webhooks_cmd.rs
ordo-cli/wix/: main.wxs  studio-dist.wxs
ordo-cloud/: Cargo.toml
ordo-cloud/src/: anthropic.rs  bus_bridge.rs  lib.rs  model_lifecycle.rs  openai.rs  vault.rs  voice.rs
ordo-code/: Cargo.toml
ordo-code/src/: lib.rs  provider.rs  service.rs  types.rs
ordo-connections/: Cargo.toml
ordo-connections/src/: lib.rs  service.rs  store.rs  types.rs
ordo-connections/src/testers/: anthropic.rs  email.rs  generic_webhook.rs  mod.rs  openai.rs  ssh.rs
ordo-control/: Cargo.toml
ordo-control/src/: auth.rs  boot_progress.html  build_api.rs  dashboard.html  lib.rs  metrics.rs  routes_apps.rs  routes_assistant.rs  routes_automation.rs  routes_avatar.rs  routes_boot.rs  routes_connections.rs  routes_extensions.rs  routes_files.rs  routes_mcp.rs  routes_memory.rs  routes_plugins.rs  routes_review.rs  routes_studio.rs  routes_system.rs  routes_ui.rs  routes_update.rs  routes_webhooks.rs  ui_bridge.js
ordo-discovery/: Cargo.toml
ordo-dispatcher/: Cargo.toml
ordo-dispatcher/src/: lib.rs
ordo-email/: Cargo.toml
ordo-email/src/: bus_bridge.rs  command.rs  config.rs  imap_poller.rs  lib.rs  smtp_sender.rs
ordo-files/: Cargo.toml
ordo-files/src/: lib.rs  provider.rs  service.rs  store.rs  types.rs
ordo-handshake/: Cargo.toml
ordo-heal/: Cargo.toml
ordo-heal/src/: lib.rs
ordo-jobs/: Cargo.toml
ordo-logic/: Cargo.toml
ordo-logic-mcp/: Cargo.toml
ordo-logic-mcp/src/: lib.rs  main.rs  sat.rs
ordo-logic/src/: capabilities.rs  fol.rs  hybrid.rs  lib.rs  llm.rs  prompts.rs  propositional.rs  provider.rs  types.rs
ordo-mcp/: Cargo.toml
ordo-mcp-client/: Cargo.toml
ordo-mcp-client/src/: attenuation.rs  dpop.rs  lib.rs
ordo-mcp-client/tests/: end_to_end.rs
ordo-mcp-host/: Cargo.toml
ordo-mcp-host/src/: bridged_providers.rs  external.rs  external_mcp.rs  helpers.rs  lib.rs  provider_assistant.rs  provider_cloud_ops.rs  provider_filesystem.rs  provider_interface_ops.rs  provider_knowledge.rs  provider_llm.rs  provider_maintenance.rs  provider_memory.rs  provider_ordo_ops.rs  provider_review.rs  provider_runtime.rs  provider_self_heal.rs
ordo-mcp-provenance/: Cargo.toml
ordo-mcp-provenance/src/: lib.rs
ordo-mcp-registry/: Cargo.toml
ordo-mcp-registry/src/: graduation.rs  lib.rs
ordo-mcp-sandbox/: Cargo.toml
ordo-mcp-sandbox/examples/: wat_compile.rs
ordo-mcp-sandbox/src/: lib.rs  policy.rs  rate.rs
ordo-mcp-server-sdk/: Cargo.toml
ordo-mcp-server-sdk/src/: lib.rs  rpc.rs
ordo-mcp-worker/: Cargo.toml
ordo-mcp-worker/src/: lib.rs  pool.rs
ordo-mcp/src/: config.rs  lib.rs  main.rs  mcp.rs  rpc.rs  runtime.rs  server.rs  tools.rs  transport.rs
ordo-memory/: Cargo.toml
ordo-memory-log/: Cargo.toml
ordo-memory-log/src/: health.rs  lib.rs  service.rs  store.rs
ordo-memory-log/tests/: health_task.rs
ordo-memory-projection/: Cargo.toml
ordo-memory-projection/src/: lib.rs  service.rs  types.rs
ordo-memory-projection/tests/: end_to_end.rs
ordo-memory-router/: Cargo.toml
ordo-memory-router/src/: classifier.rs  lib.rs  service.rs  tree.rs
ordo-mode-planners/: Cargo.toml
ordo-mode-planners/src/: lib.rs
ordo-models/: Cargo.toml
ordo-modes/: Cargo.toml
ordo-operator-sim/: Cargo.toml
ordo-orchestrator/: Cargo.toml
ordo-planner/: Cargo.toml
ordo-plugins/: Cargo.toml
ordo-policy/: Cargo.toml
ordo-protocol/: CHANGELOG.md  Cargo.toml
ordo-rag/: Cargo.toml
ordo-review/: Cargo.toml
ordo-router/: Cargo.toml
(+298 files in other folders)
