[package]
name = "ordo-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
ordo-automation-primitives = { path = "../ordo-automation-primitives" }
ordo-jobs = { path = "../ordo-jobs" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
