[package]
name = "ordo-build-planner"
version = "0.1.0"
edition = "2021"

[dependencies]
ordo-bus = { path = "../ordo-bus" }
ordo-build-primitives = { path = "../ordo-build-primitives" }
ordo-protocol = { path = "../ordo-protocol" }
ordo-store = { path = "../ordo-store" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

futures.workspace = true
tokio.workspace = true
