[package]
name = "ordo-heal"
version = "0.1.0"
edition = "2021"

[dependencies]
ordo-protocol = { path = "../ordo-protocol" }
ordo-bus = { path = "../ordo-bus" }
ordo-models = { path = "../ordo-models" }
ordo-store = { path = "../ordo-store" }
tokio.workspace = true
futures.workspace = true
chrono.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
uuid.workspace = true
