[package]
name = "ordo-mcp-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
ordo-protocol = { path = "../ordo-protocol" }
ordo-bus = { path = "../ordo-bus" }
ordo-store = { path = "../ordo-store" }
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
async-trait.workspace = true
wasmtime = { workspace = true }
blake3.workspace = true
ulid.workspace = true
regex.workspace = true
rand.workspace = true
reqwest.workspace = true

[dev-dependencies]
wat = "1"
