[package]
name = "ordo-mcp-server-sdk"
version = "0.1.0"
edition = "2021"

# Reusable SDK for building stdio-based MCP server binaries that
# the Ordo runtime (and any other MCP client — Claude
# Desktop, Cursor, Cline) can talk to. Each destination MCP
# (wordpress / bluesky / mastodon / future ones) depends on this
# crate, registers its tools through the builder, and gets the
# JSON-RPC framing + initialize handshake + standard probes
# (ping / resources/list / prompts/list) for free.

[dependencies]
ordo-protocol = { path = "../ordo-protocol" }
ordo-secrets-vault = { path = "../ordo-secrets-vault" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
