[package]
name = "ordo-memory-log"
version = "0.1.0"
edition = "2021"

[dependencies]
ordo-store = { path = "../ordo-store" }
ordo-protocol = { path = "../ordo-protocol" }
ordo-bus = { path = "../ordo-bus" }
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
futures.workspace = true
blake3.workspace = true
ulid.workspace = true
