[package]
name = "ordo-memory-router"
version = "0.1.0"
edition = "2021"

[dependencies]
ordo-protocol = { path = "../ordo-protocol" }
ordo-bus = { path = "../ordo-bus" }
ordo-store = { path = "../ordo-store" }
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
futures.workspace = true
rusqlite.workspace = true
blake3.workspace = true
