[package]
name = "ordo-mode-planners"
version = "0.1.0"
edition = "2021"
description = "Per-mode planning strategies — specialized reasoning engines for each mode's domain"

[lib]
name = "ordo_mode_planners"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }
parking_lot.workspace = true

# Ordo internal deps
ordo-bus = { path = "../ordo-bus" }
ordo-protocol = { path = "../ordo-protocol" }
ordo-modes = { path = "../ordo-modes" }

[dev-dependencies]
tokio-test = "0.4"
